Fix to Zombies and base
zombies now die and use the correct controller
base takes damage.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -52,16 +52,13 @@ LastLevel=/Game/ZTD_Blueprint/Maps/MapB
 [AssetEditorManager]
 CleanShutdown=False
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Projectile.Projectile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Base.Base
 OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
 OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Target.Target
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/Sniper_Projectile.Sniper_Projectile
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Base.Base
 OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/Sniper_Projectile.Sniper_Projectile
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1247,6 +1244,64 @@ Target_C.Input=True
 Target_C.Actor=True
 GrenadeTower_C.TransformCommon=True
 Grenade_C.TransformCommon=True
+REINST_Zombie_Character_C_130.None=True
+REINST_Zombie_Character_C_130.Tick=True
+REINST_Zombie_Character_C_130.Character=True
+REINST_Zombie_Character_C_130.Camera=True
+REINST_Zombie_Character_C_130.Pawn=True
+REINST_Zombie_Character_C_130.Rendering=True
+REINST_Zombie_Character_C_130.Replication=True
+REINST_Zombie_Character_C_130.Input=True
+REINST_Zombie_Character_C_130.Actor=True
+Target_C.TransformCommon=True
+REINST_Zombie_Character_C_175.None=True
+REINST_Zombie_Character_C_175.Tick=True
+REINST_Zombie_Character_C_175.Character=True
+REINST_Zombie_Character_C_175.Camera=True
+REINST_Zombie_Character_C_175.Pawn=True
+REINST_Zombie_Character_C_175.Rendering=True
+REINST_Zombie_Character_C_175.Replication=True
+REINST_Zombie_Character_C_175.Input=True
+REINST_Zombie_Character_C_175.Actor=True
+REINST_Zombie_Character_C_177.Variable=True
+REINST_Zombie_Character_C_177.TransformCommon=True
+REINST_Zombie_Character_C_177.Sockets=True
+REINST_Zombie_Character_C_177.Animation=True
+REINST_Zombie_Character_C_177.Mesh=True
+REINST_Zombie_Character_C_177.Materials=True
+REINST_Zombie_Character_C_177.Clothing=True
+REINST_Zombie_Character_C_177.Physics=True
+REINST_Zombie_Character_C_177.Collision=True
+REINST_Zombie_Character_C_177.Lighting=True
+REINST_Zombie_Character_C_177.Rendering=True
+REINST_Zombie_Character_C_177.Tags=True
+REINST_Zombie_Character_C_177.ComponentReplication=True
+REINST_Zombie_Character_C_177.Activation=True
+REINST_Zombie_Character_C_177.Cooking=True
+REINST_Zombie_Character_C_177.Events=True
+REINST_Zombie_Character_C_189.None=True
+REINST_Zombie_Character_C_189.Tick=True
+REINST_Zombie_Character_C_189.Character=True
+REINST_Zombie_Character_C_189.Camera=True
+REINST_Zombie_Character_C_189.Pawn=True
+REINST_Zombie_Character_C_189.Rendering=True
+REINST_Zombie_Character_C_189.Replication=True
+REINST_Zombie_Character_C_189.Input=True
+REINST_Zombie_Character_C_189.Actor=True
+REINST_Base_C_201.Variable=True
+REINST_Base_C_201.TransformCommon=True
+REINST_Base_C_201.Sockets=True
+REINST_Base_C_201.StaticMesh=True
+REINST_Base_C_201.Materials=True
+REINST_Base_C_201.Physics=True
+REINST_Base_C_201.Collision=True
+REINST_Base_C_201.Lighting=True
+REINST_Base_C_201.Rendering=True
+REINST_Base_C_201.Tags=True
+REINST_Base_C_201.ComponentReplication=True
+REINST_Base_C_201.Cooking=True
+REINST_Base_C_201.Events=True
+TowerProjectile_C.Default=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1268,7 +1323,7 @@ OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Ob
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1335,8 +1390,8 @@ StaticMesh="\"Object.BodySetup.Object.AggGeom\" \"Object.BodySetup.Object.AggGeo
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ZombieHealthbar_C=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.Blackboard\" "
 Pause_quit_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1350,12 +1405,15 @@ REINST_Zombie_Character_C_336="\"Object.Character.Mesh.Object.Collision.BodyInst
 REINST_Zombie_Character_C_344="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_352="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_360="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Base_C=
+StaticMeshActor=
+REINST_Base_C_201="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ZTD_Blueprint/Blueprints/Game_UI/Pause_menu.Pause_menu=0
@@ -1463,8 +1521,8 @@ CurrentScalingGridSize=5
 
 [MRU]
 MRUItem0=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem1=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem2=/Game/ZTD_Blueprint/Maps/Menu_Main
 MRUItem3=/Game/ZTD_Blueprint/Maps/Protomap
 MRUItem4=/Game/ZTD_Blueprint/Maps/MapC_U
 MRUItem5=/Game/ZTD_Blueprint/Maps/MapC
@@ -1478,7 +1536,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/RifleTower
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/SniperTower
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -1504,9 +1562,9 @@ AssetPropertyPicker.CurrentViewType=0
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=20.000 Y=57.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1640.000 Y=880.000
+WindowSize=X=1650.000 Y=890.000
 None=======
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2028,9 +2086,9 @@ MaterialEditor.TimeStamp=2017.03.30-13.25.07
 MaterialEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.03.29-06.29.53
 ExternalImagePicker.LastCompileMethod=External
-BlueprintProfiler.TimeStamp=2017.03.29-06.29.41
+BlueprintProfiler.TimeStamp=2017.03.30-13.24.54
 BlueprintProfiler.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2017.03.29-06.29.41
+BlueprintGraph.TimeStamp=2017.03.30-13.24.54
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2017.03.29-06.30.10
 SequencerWidgets.LastCompileMethod=External
@@ -2043,11 +2101,13 @@ TextureEditor.LastCompileMethod=Unknown
 None=======
 NewLevelDialog.TimeStamp=2017.03.14-04.21.41
 NewLevelDialog.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2017.03.14-04.22.00
-StaticMeshEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.03.30-13.25.18
+StaticMeshEditor.LastCompileMethod=External
 
 [PlacementMode]
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Base.Base;
 RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
+RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Target.Target;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower;
@@ -2132,14 +2192,15 @@ Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=
 K2Node_VariableSet=
-StaticMesh=StaticMesh.LOD4.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.MeshBuildSettings,
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD4.MeshReductionSettings,
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.TreePivotPainter,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 Landscape=Landscape.Collision.Collision,
+CapsuleComponent=CapsuleComponent.Collision.Collision,
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
