--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,7 @@ LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
 NewWindowPosition=(X=379,Y=179)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InViewPort
 None=======
 
 [WidgetTemplatesExpanded]
@@ -47,32 +47,14 @@ User Created=False
 None=======
 
 [EditorStartup]
-<<<<<<< HEAD
 LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
-=======
-LastLevel=/Game/ZTD_Blueprint/Maps/MapB
->>>>>>> master
+LastLevel=/Game/ZTD_Blueprint/Maps/MapA
+None=======
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 None=======
-<<<<<<< HEAD
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Menu/MapSelect.MapSelect
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Base.Base
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_GameMode.ZTD_GameMode
-=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Projectile.Projectile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Base.Base
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Target.Target
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/Sniper_Projectile.Sniper_Projectile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade
->>>>>>> master
+None=======
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -851,6 +833,7 @@ PanelWidget.Performance=True
 PanelWidget.Render Transform=True
 PanelWidget.Navigation=True
 None=======
+None=======
 LandscapeEditorObject.New Landscape=True
 Actor.TransformCommon=True
 Actor.Rendering=True
@@ -1249,7 +1232,6 @@ Sniper_Projectile_C.Rendering=True
 Sniper_Projectile_C.Replication=True
 Sniper_Projectile_C.Input=True
 Sniper_Projectile_C.Actor=True
-<<<<<<< HEAD
 AtmosphericFog.TransformCommon=True
 AtmosphericFog.Atmosphere=True
 AtmosphericFog.Lighting=True
@@ -1269,7 +1251,6 @@ REINST_Base_C_157.Cooking=True
 REINST_Base_C_157.Input=True
 REINST_Base_C_157.Actor=True
 Actor.Input=True
-=======
 SniperTower_C.TransformCommon=True
 RifleTower_C.TransformCommon=True
 Target_C.Tick=True
@@ -1279,7 +1260,6 @@ Target_C.Input=True
 Target_C.Actor=True
 GrenadeTower_C.TransformCommon=True
 Grenade_C.TransformCommon=True
->>>>>>> master
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1445,6 +1425,7 @@ None=======
 /Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile=0
 /Game/ZTD_Blueprint/Blueprints/SniperTower/Tower1_Gun.Tower1_Gun=0
 /Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower=1
+/Game/Assets/Forest_Stuff/Meshes/Trees/SM_tree8.SM_tree8=1
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1496,21 +1477,16 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 
 [MRU]
-<<<<<<< HEAD
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapC_U_F
-MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapB
-=======
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapC_U_F
->>>>>>> master
-MRUItem3=/Game/ZTD_Blueprint/Maps/Protomap
-MRUItem4=/Game/ZTD_Blueprint/Maps/MapC_U
-MRUItem5=/Game/ZTD_Blueprint/Maps/MapC
-MRUItem6=/Game/ZTD_Blueprint/Maps/ZTD_Main
-MRUItem7=/Game/ZTD_Blueprint/Maps/Level_3
-MRUItem8=/Game/ZTD_Blueprint/Blueprints/Protomap
+MRUItem0=/Game/ZTD_Blueprint/Maps/MapA
+MRUItem1=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem2=/Game/ZTD_Blueprint/Maps/MapC
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem4=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
+MRUItem6=/Game/ZTD_Blueprint/Maps/MapC_U
+MRUItem7=/Game/ZTD_Blueprint/Maps/ZTD_Main
+MRUItem8=/Game/ZTD_Blueprint/Maps/Level_3
+MRUItem9=/Game/ZTD_Blueprint/Blueprints/Protomap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1518,7 +1494,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Normal_Zombie_AI
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Forest_Stuff/Meshes/Trees
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -1544,7 +1520,7 @@ AssetPropertyPicker.CurrentViewType=0
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=20.000 Y=57.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1650.000 Y=890.000
+WindowSize=X=1600.000 Y=900.000
 None=======
 InitiallyMaximized=True
 
@@ -1567,7 +1543,7 @@ PrimType=1
 
 [Directories2]
 UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
-UNR=D:/Users/Bryan/Desktop/ZTD/Zombie_Tower_Defense/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
+UNR=../../../../../UE4 Projects/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
@@ -2087,15 +2063,13 @@ StaticMeshEditor.TimeStamp=2017.03.14-04.22.00
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
-RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
-<<<<<<< HEAD
-RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Base.Base;
-=======
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower;
->>>>>>> master
 RecentlyPlaced=/Game/Blueprints/Music3.Music3;
 RecentlyPlaced=/Game/Assets/Building_Asset_set_1/Street_environment_V01_City_building_011.Street_environment_V01_City_building_011;
 RecentlyPlaced=/Game/Assets/Building_Asset_set_1/Street_environment_V01_City_building_007.Street_environment_V01_City_building_007;
@@ -2105,9 +2079,10 @@ RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2LanesTurn.FreeRoadSet_2Lanes
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2Lanes.FreeRoadSet_2Lanes;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_11
 RecentlyPlaced=/Game/ZTD_Blueprint/Maps/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
+None=======
 
 [LandscapeEdit]
-BrushRadius=259.564148
+BrushRadius=451.111542
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -2120,7 +2095,7 @@ SmoothFilterKernelSize=4
 MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
-ToolStrength=0.088991
+ToolStrength=0.128440
 BrushFalloff=0.422018
 
 [DetailCustomWidgetExpansion]
@@ -2177,7 +2152,7 @@ Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=
 K2Node_VariableSet=
-StaticMesh=StaticMesh.LOD4.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.MeshBuildSettings,
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD4.MeshReductionSettings,
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.TreePivotPainter,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
@@ -2193,6 +2168,8 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
+Radius=512.002930
+PaintDensity=0.010000
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
