UI changes and other minor edits
Fixed things like map buttons, tower money description, and zombie huge
payout bug.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,7 @@ LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
 NewWindowPosition=(X=379,Y=179)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_InViewPort
+LastExecutedPlayModeType=PlayMode_InNewProcess
 None=======
 
 [WidgetTemplatesExpanded]
@@ -48,7 +48,7 @@ None=======
 
 [EditorStartup]
 LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
-LastLevel=/Game/ZTD_Blueprint/Maps/MapA
+LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
 None=======
 
 [AssetEditorManager]
@@ -1260,6 +1260,16 @@ Target_C.Input=True
 Target_C.Actor=True
 GrenadeTower_C.TransformCommon=True
 Grenade_C.TransformCommon=True
+TowerProjectile_C.Default=True
+Gameover_front_C.Appearance=True
+Gameover_front_C.Interaction=True
+Gameover_front_C.Input=True
+Gameover_front_C.Designer=True
+Gameover_front_C.Layout=True
+Gameover_front_C.Behavior=True
+Gameover_front_C.Performance=True
+Gameover_front_C.Render Transform=True
+Gameover_front_C.Navigation=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1279,9 +1289,9 @@ Zombie_Character_C.Collision=True
 [DetailPropertyExpansion]
 OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1304,9 +1314,9 @@ WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReve
 Info=
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
-Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget=
-ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget=
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 None=======
@@ -1369,6 +1379,7 @@ PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseA
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Gameover_front_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ZTD_Blueprint/Blueprints/Game_UI/Pause_menu.Pause_menu=0
@@ -1381,7 +1392,7 @@ SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArra
 /Game/ZTD_Blueprint/Blueprints/Player_Character.Player_Character=0
 /Game/ZTD_Blueprint/Blueprints/HUD/Ingame_UI.Ingame_UI=0
 /Game/ZTD_Blueprint/Blueprints/ZTD_MainMenu_Mode.ZTD_MainMenu_Mode=0
-/Game/ZTD_Blueprint/Blueprints/Menu/MapSelect.MapSelect=0
+/Game/ZTD_Blueprint/Blueprints/Menu/MapSelect.MapSelect=1
 /Game/ZTD_Blueprint/Blueprints/Projectile.Projectile=0
 /Game/ZTD_Blueprint/Blueprints/Test_Tower.Test_Tower=1
 /Game/ZTD_Blueprint/Blueprints/Test_Tower.Test_Tower=0
@@ -1422,10 +1433,18 @@ None=======
 /Game/Assets/Forest_Stuff/Meshes/Trees/SM_tree3.SM_tree3=1
 /Game/ZTD_Blueprint/Blueprints/SniperTower/Tower1_Base.Tower1_Base=0
 /Game/ZTD_Blueprint/Blueprints/RifleTower/Tower1_Gun.Tower1_Gun=0
-/Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile=0
+/Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile=1
 /Game/ZTD_Blueprint/Blueprints/SniperTower/Tower1_Gun.Tower1_Gun=0
 /Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower=1
 /Game/Assets/Forest_Stuff/Meshes/Trees/SM_tree8.SM_tree8=1
+/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade=1
+/Game/ZTD_Blueprint/Blueprints/SniperTower/Sniper_Projectile.Sniper_Projectile=1
+/Game/ZTD_Blueprint/Blueprints/Game_UI/Gameover.Gameover=1
+/Game/ZTD_Blueprint/Blueprints/Game_UI/Gameover_front.Gameover_front=1
+/Game/ZTD_Blueprint/Blueprints/Game_UI/Gamewon_back2.Gamewon_back2=1
+/Game/ZTD_Blueprint/Blueprints/Game_UI/Gameover_back.Gameover_back=1
+/Game/ZTD_Blueprint/Blueprints/Game_UI/Victory_back.Victory_back=1
+/Game/ZTD_Blueprint/Blueprints/Game_UI/Endgame_front.Endgame_front=1
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1477,11 +1496,11 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapA
-MRUItem1=/Game/ZTD_Blueprint/Maps/MapC_U_F
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapC
-MRUItem3=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem4=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem1=/Game/ZTD_Blueprint/Maps/MapA
+MRUItem2=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapC
+MRUItem4=/Game/ZTD_Blueprint/Maps/MapB
 MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
 MRUItem6=/Game/ZTD_Blueprint/Maps/MapC_U
 MRUItem7=/Game/ZTD_Blueprint/Maps/ZTD_Main
@@ -1494,7 +1513,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Forest_Stuff/Meshes/Trees
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Game_UI
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -1518,9 +1537,9 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=-1272.000 Y=148.000
-ScreenPosition=X=20.000 Y=57.000
+ScreenPosition=X=1.000 Y=1.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1600.000 Y=900.000
+WindowSize=X=1364.000 Y=726.000
 None=======
 InitiallyMaximized=True
 
@@ -1543,12 +1562,12 @@ PrimType=1
 
 [Directories2]
 UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
-UNR=../../../../../UE4 Projects/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
+UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBXAnim=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
-GenericImport=C:/Users/Jonathan/Desktop/game sounds/zombie groans/Zombie Gets Attacked-SoundBible.com-20348330.wav
+GenericImport=C:/Users/Jonathan/Desktop/map3_1.png
 GenericExport=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 GenericOpen=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 GenericSave=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
@@ -2150,13 +2169,14 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
 Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
-K2Node_VariableGet=
-K2Node_VariableSet=
+K2Node_VariableGet=Zombie_Character_C.Collision.Collision,
+K2Node_VariableSet=Zombie_Character_C.Collision.Collision,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD4.MeshReductionSettings,
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.TreePivotPainter,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 Landscape=Landscape.Collision.Collision,
+BoolProperty=Zombie_Character_C.Collision.Collision,
 
 [SelectionDetails]
 PreserveScaleRatio=False
