Deleted all trees from all maps

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,7 @@ LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
 NewWindowPosition=(X=379,Y=179)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_InNewProcess
+LastExecutedPlayModeType=PlayMode_InViewPort
 None=======
 
 [WidgetTemplatesExpanded]
@@ -55,19 +55,6 @@ None=======
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Character.Player_Character
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Base.Base
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_Instance.ZTD_Instance
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/HUD/Ingame_UI.Ingame_UI
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_GameMode.ZTD_GameMode
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Maps/Menu_Main.Menu_Main:PersistentLevel.Menu_Main
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Materials/TowerTransparent2.TowerTransparent2
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1764,7 +1751,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Maps
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -1790,7 +1777,7 @@ AssetPropertyPicker.CurrentViewType=0
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=1.000 Y=1.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1374.000 Y=736.000
+WindowSize=X=1384.000 Y=746.000
 None=======
 InitiallyMaximized=True
 
@@ -1813,7 +1800,7 @@ PrimType=1
 
 [Directories2]
 UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
-UNR=D:/Users/Bryan/Desktop/ZTD/Zombie_Tower_Defense/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
+UNR=../../../../../UE4 Projects/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
@@ -2419,7 +2406,7 @@ SlateRemoteSettings=InputSettings.Bindings.ActionMappings.TestDamagePlayer,Input
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.TestDamagePlayer,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.TestDamagePlayer,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.TestDamagePlayer,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
 Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=
@@ -2442,7 +2429,7 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
-Radius=512.002930
+Radius=1989.817871
 PaintDensity=0.010000
 
 [/Script/EditorStyle.EditorStyleSettings]
